# LibtorchSalesPrediction-

Plot/: main.cpp  mslq.cpp  mslq.h  plot.cpp  plot.h  qwer.pro  widget.cpp  widget.h
neiro/: CMakeLists.txt  file.cpp  file.h  main.cpp  mslq.cpp  mslq.h  msql.cpp  nn.cpp  nn.h  plot.cpp  plot.h  weather.cpp  weather.h
